Ensure table header contents are visible
Sort icons overlapped with words and header text sometimes took 2 rows

--- a/frontend/src/Pages/CSS/Home.css
+++ b/frontend/src/Pages/CSS/Home.css
@@ -2,33 +2,39 @@
     margin: 20px;
 }
 th{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     padding: 10px;
+    text-align: left;
+    text-indent: 0.75em;
+    padding: 0;
+    overflow: hidden;
+    white-space: nowrap;
 }
 th:hover {
     cursor: pointer;
 }
 th.both {
     background-image: url("../../Components/Assets/arrow-both.png");
-    background-size: 10px 25%;
 }
 th.up {
     background-image: url("../../Components/Assets/arrow-up.png");
-    background-size: 5px 25%;
 }
 th.down {
     background-image: url("../../Components/Assets/arrow-down.png");
-    background-size: 5px 25%;
 }
 th.both, th.up, th.down {
     background-repeat: no-repeat;
-    background-position: center right;
+    background-position: center left;
+    background-size: 10px 60%;
+}
+td {
+    height: 30px;
+    text-indent: 0.75em;
 }
 .table{
     margin: 10px auto 10px;
-    gap: 5px;
-    border-spacing: 25px 0;
+    border-spacing: 15px 0;
 }
 #url{
     cursor: auto;
